# rotmg-metadata

./: .gitmodules  404.html  Cargo.toml  README.md
.github/workflows/: rust.yml
assets/production/: version.txt
assets/production/xml/: abyssOfDemons.xml  abyssOfDemonsObjects.xml  alienInvasionObjects.xml  ancientRuinsObjects.xml  buffedBunnyObjects.xml  caveOfAThousandTreasures.xml  cnidarianReefObjects.xml  crystalCaveObjects.xml  cursedLibraryObjects.xml  deadwaterDocksObjects.xml  dungeonTemplates_0.xml  encounters.xml  epicforestMaze.xml  equip.xml  equipKeys.xml  equipSkins.xml  equipTest.xml  equipTitles.xml  equipmentsets.xml  eventChestObjects.xml  (+63 more)
assets/testing/: version.txt
production/xml/: abyssOfDemons.xml  alienInvasionObjects.xml  allies.xml  ancientRuinsObjects.xml  archbishopObjectsMen.xml  battleOryxObjects.xml  belladonna.xml  buffedBunnyObjects.xml  candyLand.xml  containers.xml  cursedLibraryObjects.xml  deadwaterDocksObjects.xml  dungeonTemplates_0.xml  encounters.xml  epicHiveObjects.xml  epicspiderDen.xml  equip.xml  forbiddenJungle.xml  fungalCavernObjects.xml  ghostShip.xml  hauntedCemetery.xml  iceTomb.xml  innerWorkingsObjects.xml  lairOfDraconis.xml  lairOfShaitan.xml  lairOfShaitanObjects.xml  low.xml  mid.xml  oryxChamber.xml  oryxChickenChamber.xml  oryxHordeObjects.xml  oryxSanctuaryObjects.xml  oryxSanctuaryUObjects.xml  oryxWineCellar.xml  permaFrostLord.xml  pets.xml  players_zombies.xml  puppetMaster.xml  puppetMasterEncore.xml  santaWorkshopObjects.xml  (+7 more)
public/: 404.html
src/: asset_ripper.rs  main.rs  rotmg_driver.rs
(+72 files in other folders)
